--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas==1.0.1
 numpy==1.18.1
 influxdb==5.3.0
-sklearn==0.23.2
+scikit-learn===0.23.2
 matplotlib==3.2.1
 statsmodels==0.11.1
 imblearn==0.7.0
